apps/miniflux/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: miniflux
spec:
  type: ClusterIP
  selector:
    app: miniflux
  ports:
    - port: 8080
      targetPort: 8080
