apps/miniflux/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: miniflux
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`playground.hefler.dev`)
      observability:
        accessLogs: true
        metrics: true
        tracing: true
      services:
        - kind: Service
          name: miniflux
          namespace: default
          passHostHeader: true
          port: 8080
